[project]
name = "top-backend"
version = "1.0.0"
description = "TOP backend (Django)"
authors = [{ name = "Gemeente Amsterdam", email = "datapunt@amsterdam.nl" }]
readme = "../README.md"
requires-python = "~=3.13"
packages = [{ include = "apps" }]

dependencies = [
    "applicationinsights (~=0.11)",
    "azure-identity (~=1.24)",
    "azure-monitor-opentelemetry (>=1.7.0,<2.0.0)",
    "cachetools (~=6.1)",
    "celery (~=5.4)",
    "django (~=5.2)",
    "django-celery-beat (~=2.7)",
    "django-celery-results (~=2.5)",
    "django-constance[database] (~=4.3)",
    "django-cors-headers (~=4.7)",
    "django-filter (~=25.1)",
    "django-health-check (~=3.16)",
    "django-timezone-field (<8.0)",
    "djangorestframework (~=3.15)",
    "djangorestframework-simplejwt (~=5.3)",
    "drf-spectacular (~=0.28)",
    "freezegun (~=1.5)",
    "geopy (~=2.4)",
    "joblib (~=1.3)",
    "model-bakery (~=1.5)",
    "mozilla-django-oidc (~=4.0)",
    "psycopg2-binary (~=2.9)",
    "redis (~=6.4)",
    "requests (~=2.32)",
    "requests-mock (~=1.12)",
    "tenacity (~=9.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
